; ModuleID = '/home/carl/AnghaBench/libgit2/tests/network/remote/extr_local.c_test_network_remote_local__shorthand_fetch_refspec0.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/network/remote/extr_local.c_test_network_remote_local__shorthand_fetch_refspec0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8**, i32 }

@.str = private unnamed_addr constant [29 x i8] c"master:remotes/sloppy/master\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"master:boh/sloppy/master\00", align 1
@__const.test_network_remote_local__shorthand_fetch_refspec0.refspec_strings = private unnamed_addr constant [2 x i8*] [i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i32 0, i32 0)], align 16
@.str.2 = private unnamed_addr constant [13 x i8] c"testrepo.git\00", align 1
@remote = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [27 x i8] c"refs/remotes/sloppy/master\00", align 1
@.str.4 = private unnamed_addr constant [29 x i8] c"refs/heads/boh/sloppy/master\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_network_remote_local__shorthand_fetch_refspec0() #0 {
  %1 = alloca [2 x i8*], align 16
  %2 = alloca %struct.TYPE_3__, align 8
  %3 = alloca i32*, align 8
  %4 = bitcast [2 x i8*]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 bitcast ([2 x i8*]* @__const.test_network_remote_local__shorthand_fetch_refspec0.refspec_strings to i8*), i64 16, i1 false)
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  %6 = getelementptr inbounds [2 x i8*], [2 x i8*]* %1, i64 0, i64 0
  store i8** %6, i8*** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 1
  store i32 2, i32* %7, align 8
  %8 = call i32 @cl_fixture(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %9 = call i32 @connect_to_local_repository(i32 %8)
  %10 = load i32, i32* @remote, align 4
  %11 = call i32 @git_remote_fetch(i32 %10, %struct.TYPE_3__* %2, i32* null, i32* null)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = load i32, i32* @repo, align 4
  %14 = call i32 @git_reference_lookup(i32** %3, i32 %13, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0))
  %15 = call i32 @cl_git_pass(i32 %14)
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @git_reference_free(i32* %16)
  %18 = load i32, i32* @repo, align 4
  %19 = call i32 @git_reference_lookup(i32** %3, i32 %18, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.4, i64 0, i64 0))
  %20 = call i32 @cl_git_pass(i32 %19)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @git_reference_free(i32* %21)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @connect_to_local_repository(i32) #2

declare dso_local i32 @cl_fixture(i8*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_remote_fetch(i32, %struct.TYPE_3__*, i32*, i32*) #2

declare dso_local i32 @git_reference_lookup(i32**, i32, i8*) #2

declare dso_local i32 @git_reference_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
